--- a/templates/users/show.html
+++ b/templates/users/show.html
@@ -1,16 +1,47 @@
-<!DOCTYPE html>
-<html>
-<head>
-    <title>User Details</title>
-</head>
-<body>
-    <h1>User Details</h1>
-    <p><strong>Name:</strong> {{ user.full_name }}</p>
-    <p><strong>Image URL:</strong> <img src="{{ user.image_url }}" alt="User Image"></p>
-    <a href="{{ url_for('users_edit', user_id=user.id) }}">Edit User</a>
-    <form method="POST" action="{{ url_for('users_destroy', user_id=user.id) }}">
-        <button type="submit">Delete User</button>
+{% extends 'base.html' %}
+
+{% block title %}{{ user.full_name }}{% endblock %}
+
+{% block content %}
+
+<div class="row">
+
+  {% if user.image_url %}
+  <div class="col-sm-2 col-6">
+    <img src="{{ user.image_url }}"
+         alt="{{ user.full_name }}"
+         class="img-fluid">
+  </div>
+  {% endif %}
+
+  <div class="col-sm-10 col-12">
+    <h1>{{ user.full_name }}</h1>
+
+    <form>
+      <button class="btn btn-primary btn-sm"
+              formaction="{{ url_for('users_edit', user_id=user.id) }}"
+              formmethod="GET">Edit
+      </button>
+      <button class="btn btn-danger btn-sm"
+              formaction="{{ url_for('users_destroy', user_id=user.id) }}"
+              formmethod="POST">Delete
+      </button>
     </form>
-    <a href="{{ url_for('list_of_users') }}">Back to Users List</a>
-</body>
-</html>
+
+    <h2 class="mt-4">Posts</h2>
+
+    <ul>
+      {% for post in user.posts %}
+      <li>
+        <a href="{{ url_for('posts_show', post_id=post.id) }}">{{ post.title }}</a>
+        <small>{{ post.friendly_date }}</small>
+      </li>
+      {% endfor %}
+    </ul>
+
+    <p><a href="{{ url_for('posts_new_form', user_id=user.id) }}" class="btn btn-primary">Add Post</a></p>
+
+  </div>
+</div>
+
+{% endblock %}
